# myChat

GateServer/: CServer.cpp  CmakeLists.txt  CmakePresets.json  ConfigMgr.h  GateServer.cpp  HttpConnection.cpp  HttpConnection.h  LogicSystem.cpp  LogicSystem.h  MysqlDao.cpp  VarifyGrpcClient.cpp  VarifyGrpcClient.h  const.h
VarifyServer/: config.json  package.json  server.js
client/: CMakeLists.txt  global.cpp  global.h  logindialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  registerdialog.cpp  registerdialog.h  registerdialog.ui  res.qrc
client/style/: stylesheet.qss
server/: CMakeLists.txt  CMakePresets.json
